Modifications to add parameters to the completion script